--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,6 +1,12 @@
-FROM node:20 AS build-stage
+FROM node:20 AS test-stage
+WORKDIR /usr/src/app
+COPY . .
+RUN npm ci
+RUN npm run test
+
+FROM node:20 AS dev-stage
 WORKDIR /usr/src/app
 COPY . .
 RUN npm ci
 ENV VITE_BACKEND_URL=http://localhost:3000
-CMD npm run dev
+CMD npm run dev 
