--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -4,9 +4,9 @@ COPY . .
 RUN npm ci
 RUN npm run test
 
-FROM node:20 AS dev-stage
+FROM node:20 AS build-stage
 WORKDIR /usr/src/app
 COPY . .
 RUN npm ci
 ENV VITE_BACKEND_URL=http://localhost:3000
-CMD npm run dev 
+RUN npm run build
