--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -8,5 +8,8 @@ FROM node:20 AS build-stage
 WORKDIR /usr/src/app
 COPY . .
 RUN npm ci
-ENV VITE_BACKEND_URL=http://localhost:3000
+ENV VITE_BACKEND_URL=http://localhost:8080/api
 RUN npm run build
+
+FROM nginx:1.25-alpine
+COPY --from=build-stage /usr/src/app/dist /usr/share/nginx/html
